# rust-options

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
crates/market-data/: Cargo.toml
crates/market-data/examples/: fetch_chain.rs
crates/market-data/src/: error.rs  lib.rs  types.rs  yahoo.rs
crates/pricer/: Cargo.toml
crates/pricer/benches/: pricing_benchmarks.rs
crates/pricer/src/: binomial.rs  black_scholes.rs  error.rs  implied_volatility.rs  lib.rs  monte_carlo.rs  normal.rs  rng.rs  svi.rs  types.rs  wasm.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs
crates/vol-model/: Cargo.toml
crates/vol-model/src/: error.rs  lib.rs  model.rs  types.rs
crates/vol-model/tests/: load_and_predict.rs
crates/web/: Cargo.toml
crates/web/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/web/frontend/src/: api.ts  main.ts  tooltip.ts  types.ts  utils.ts
crates/web/frontend/src/pages/: calculator.ts  chain.ts  home.ts  strategy.ts
crates/web/frontend/src/styles/: style.css
crates/web/src/: api.rs  lib.rs  main.rs
data/: build_dataset.py  fetch_options.py  requirements.txt  svi_dataset.csv
data/vol_model/: dataset.py  export.py  model.py  train.py
data/vol_model/checkpoints/: best.pt
data/vol_model/exported/: norm_stats.json  vol_model.onnx  vol_model.onnx.data
