[package]
name = "market-data"
version = "0.1.0"
edition = "2021"
description = "Real-time and historical market data ingestion"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
pricer = { path = "../pricer" }
