[package]
name = "pricer"
version = "0.1.0"
edition = "2021"
description = "Blazing-fast equity derivatives pricing engine — Black-Scholes, Monte Carlo, binomial trees"

[features]
wasm = ["dep:wasm-bindgen"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pricing_benchmarks"
harness = false
