[package]
name = "vol-model"
version = "0.1.0"
edition = "2021"
description = "Transformer-based vol surface prediction via ONNX Runtime"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
pricer = { path = "../pricer" }
