[package]
name = "web"
version = "0.1.0"
edition = "2021"
description = "Axum REST API and web dashboard"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
pricer = { path = "../pricer" }
market-data = { path = "../market-data" }
